# dfvm

./: .gitignore  CMakeLists.txt  __init__.py  analyt.py  cfd.py  cfd_2D.py  cfd_meng.py
diffusion/: CMakeLists.txt  Equation.cpp  Equation.h  wrapper.cpp
diffusion/math/: Boundary.cpp  Boundary.h  Convective.cpp  Convective.h  Local.cpp  Local.h  Props.cpp  Props.h  funcs.cpp  funcs.h
inOut/: .gitignore
latex/: .gitignore  first_model.tex  models.tex  second_model.tex  third_model.tex
sgrid/: CMakeLists.txt  Sgrid.cpp  Sgrid.h  SgridGetSet.cpp  SgridVtk.cpp  script.py  wrapper.cpp
utilities/: __init__.py  plot_params.py  visualisation.py
